--- a/css/c04_styles.css
+++ b/css/c04_styles.css
@@ -2,3 +2,22 @@ h1 {
   text-align: center;
   color: blue;
 }
+
+div {
+  width: 300px;
+  height: 200px;
+  background-color: blue;
+  padding: 3px;
+  margin: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  border: 3px solid black;
+}
+
+table, td, th {
+  border: 1px solid black;
+  border-collapse: collapse;
+  padding: 5px;
+
+}
